--- a/front-end/src/app/ajout-categorie/ajout-categorie.component.html
+++ b/front-end/src/app/ajout-categorie/ajout-categorie.component.html
@@ -34,7 +34,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="createCategorie(categories)"
-              type="submit" mdbBtn color="primary" mdbWavesEffect [disabled]="!ajoutCategorieForm.valid">
+              type="submit" mdbBtn color="light-green" mdbWavesEffect [disabled]="!ajoutCategorieForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
