--- a/front-end/src/app/ajout-utilisateur/ajout-utilisateur.component.html
+++ b/front-end/src/app/ajout-utilisateur/ajout-utilisateur.component.html
@@ -1,3 +1,11 @@
+<br>
+
+<button type="button" class="close" aria-label="Close" routerLink="/utilisateurs">
+  <span aria-hidden="true">×</span>
+</button>
+
+
+
 <div class="form-horizontal pad-10">
   <br>
 
@@ -80,7 +88,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="createUtilisateur(utilisateurs)"
-              type="submit" class="btn btn-save btn-primary" [disabled]="!ajoutUtilisateurForm.valid">
+              type="submit" mdbBtn color="light-green" [disabled]="!ajoutUtilisateurForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
