--- a/front-end/src/app/statistiques/statistiques.component.html
+++ b/front-end/src/app/statistiques/statistiques.component.html
@@ -1,4 +1,10 @@
+
 <br>
+
+<button type="button" class="close" aria-label="Close" routerLink="/admin">
+  <span aria-hidden="true">×</span>
+</button>
+
 
 <div style="display: block">
   <canvas mdbChart
