--- a/front-end/src/app/ajout-produit/ajout-produit.component.html
+++ b/front-end/src/app/ajout-produit/ajout-produit.component.html
@@ -1,3 +1,10 @@
+<br>
+
+<button type="button" class="close" aria-label="Close" routerLink="/categories">
+  <span aria-hidden="true">×</span>
+</button>
+
+
 <div class="form-horizontal pad-10">
   <br>
   <form #ajoutProduitForm="ngForm">
@@ -59,7 +66,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="createProduit(produits)"
-              type="submit" class="btn btn-save btn-primary" [disabled]="!ajoutProduitForm.valid">
+              type="submit" mdbBtn color="light-green" mdbWavesEffect [disabled]="!ajoutProduitForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
