--- a/front-end/src/app/fournisseurs/fournisseurs.component.html
+++ b/front-end/src/app/fournisseurs/fournisseurs.component.html
@@ -1,34 +1,89 @@
-<div>
-  <button type="submit" class="btn btn-primary" (click)="goToAddFournisseurs()">
-    <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Fournisseur
-  </button>
+<br>
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
+
+  <!-- Navbar brand -->
+  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Fournisseurs</a></mdb-navbar-brand>
+
+  <!-- Collapsible content -->
+  <links>
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto ">
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/utilisateurs" mdbWavesEffect>UTILISATEURS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
+      </li>
+    </ul>
+    <!-- Links -->
+  </links>
+  <!-- Collapsible content -->
+
+</mdb-navbar>
+<!--/.Navbar-->
+
+
+
+<!-- Jumbotron -->
+<div class="jumbotron text-center">
+
+  <!-- Title -->
+  <h2 class="card-title h2">Administration des Fournisseurs</h2>
+  <!-- Subtitle -->
+  <p class="green-text my-4 font-weight-bold">iDlunch propose plus de fournisseurs</p>
+
+
+
+  <hr class="my-4">
+
+  <form class="form-inline md-form mr-auto mb-4">
+    <button mdbBtn size="md" color="light-green" rounded="true" class="my-0 waves-light" mdbWavesEffect type="submit" (click)="goToAddFournisseurs()">Ajout Fournisseur</button>
+  </form>
+
+
+  <div>
+    <table id="table" mdbTable>
+
+
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nom</th>
+        <th>Adresse</th>
+        <th>Catégorie</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr mdbTableCol *ngFor="let f of fournisseurs">
+        <td>{{ f.id }}</td>
+        <td>{{ f.nom }}</td>
+        <td>{{ f.adresse }}</td>
+        <td>{{ f.categorie}}</td>
+
+        <td>
+          <button [id]="f.id" type="submit" mdbBtn color="danger" outline="true" mdbWavesEffect (click)="deleteFourn(f.id)">Supprimer</button>
+          <button [id]="f.id" type="submit" mdbBtn color="primary" outline="true" mdbWavesEffect [routerLink]="['/modifier-fournisseur', f.id]">Modifier</button>
+
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+
 </div>
-
-<div>
-  <table id="table" mdbTable>
+<!-- Jumbotron -->
 
 
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Nom</th>
-      <th>Adresse</th>
-      <th>Catégorie</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr mdbTableCol *ngFor="let f of fournisseurs">
-      <td>{{ f.id }}</td>
-      <td>{{ f.nom }}</td>
-      <td>{{ f.adresse }}</td>
-      <td>{{ f.categorie}}</td>
 
-      <td>
-        <button [id]="f.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteFourn(f.id)">Supprimer</button>
-        <button [id]="f.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-fournisseur', f.id]">Modifier</button>
 
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+
