--- a/front-end/src/app/modifier-categorie/modifier-categorie.component.html
+++ b/front-end/src/app/modifier-categorie/modifier-categorie.component.html
@@ -32,7 +32,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="modifierCategorie(this.id)"
-              type="submit" mdbBtn color="primary" mdbWavesEffect [disabled]="!modifierCategorieForm.valid">
+              type="submit" mdbBtn color="light-green" mdbWavesEffect [disabled]="!modifierCategorieForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
