--- a/front-end/src/app/modifier-produit/modifier-produit.component.html
+++ b/front-end/src/app/modifier-produit/modifier-produit.component.html
@@ -1,3 +1,9 @@
+<br>
+
+<button type="button" class="close" aria-label="Close" routerLink="/produits">
+  <span aria-hidden="true">×</span>
+</button>
+
 <div class="form-horizontal pad-10">
   <br>
   <form #modifierProduitForm="ngForm">
@@ -29,7 +35,7 @@
               [popoverMessage]="'êtes-vous sûr?'"
               placement="top"
               (confirm)="modifierProduit(this.id)"
-              type="submit" class="btn btn-save btn-primary" [disabled]="!modifierProduitForm.valid">
+              type="submit" mdbBtn color="light-green" mdbWavesEffect [disabled]="!modifierProduitForm.valid">
         <span class="glyphicon glyphicon-floppy-disk"></span> Sauvegarder
       </button>
     </div>
