--- a/front-end/src/app/utilisateurs/utilisateurs.component.html
+++ b/front-end/src/app/utilisateurs/utilisateurs.component.html
@@ -1,40 +1,97 @@
-<button type="submit" class="btn btn-primary" (click)="goToAddUtilisateurs()">
-  <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Utilisateur
-</button>
-
-<div>
-  <table id="table" mdbTable>
+<br>
 
 
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Nom</th>
-      <th>Prénom</th>
-      <th>Genre</th>
-      <th>Email</th>
-      <th>Adresse</th>
-      <th>Téléphone</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr mdbTableCol *ngFor="let u of utilisateurs">
-      <td>{{ u.id }}</td>
-      <td>{{ u.nom }}</td>
-      <td>{{ u.prenom }}</td>
-      <td>{{ u.genre }}</td>
-      <td>{{ u.email }}</td>
-      <td>{{ u.adresse }}</td>
-      <td>{{ u.telephone }}</td>
+
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
+
+  <!-- Navbar brand -->
+  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Utilisateurs</a></mdb-navbar-brand>
+
+  <!-- Collapsible content -->
+  <links>
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto ">
+      <li class="nav-item ">
+        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/fournisseurs" mdbWavesEffect>FOURNISSEURS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light white-text" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
+      </li>
+    </ul>
+    <!-- Links -->
+  </links>
+  <!-- Collapsible content -->
+
+</mdb-navbar>
+<!--/.Navbar-->
 
 
-      <td>
-        <button [id]="u.id" type="submit" mdbBtn color="danger" mdbWavesEffect (click)="deleteUtilisateur(u.id)">Supprimer</button>
-        <button [id]="u.id" type="submit" mdbBtn color="primary" mdbWavesEffect [routerLink]="['/modifier-utilisateur', u.id]">Modifier</button>
+<!-- Jumbotron -->
+<div class="jumbotron text-center">
 
-      </td>
-    </tr>
-    </tbody>
-  </table>
+  <!-- Title -->
+  <h2 class="card-title h2">Administration des Fournisseurs</h2>
+  <!-- Subtitle -->
+  <p class="green-text my-4 font-weight-bold">iDlunch propose plus de fournisseurs</p>
+
+
+
+  <hr class="my-4">
+
+  <form class="form-inline md-form mr-auto mb-4">
+    <button mdbBtn size="md" color="light-green" rounded="true" class="my-0 waves-light" mdbWavesEffect type="submit" (click)="goToAddUtilisateurs()">Ajout Utilisateur</button>
+  </form>
+
+
+
+  <div>
+    <table id="table" mdbTable>
+
+
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Genre</th>
+        <th>Email</th>
+        <th>Adresse</th>
+        <th>Téléphone</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr mdbTableCol *ngFor="let u of utilisateurs">
+        <td>{{ u.id }}</td>
+        <td>{{ u.nom }}</td>
+        <td>{{ u.prenom }}</td>
+        <td>{{ u.genre }}</td>
+        <td>{{ u.email }}</td>
+        <td>{{ u.adresse }}</td>
+        <td>{{ u.telephone }}</td>
+
+
+        <td>
+          <button [id]="u.id" type="submit" mdbBtn color="danger" outline="true" (click)="deleteUtilisateur(u.id)">Supprimer</button>
+          <button [id]="u.id" type="submit" mdbBtn color="primary" outline="true" [routerLink]="['/modifier-utilisateur', u.id]">Modifier</button>
+
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+
 </div>
+<!-- Jumbotron -->
+
+
+
 
