--- a/front-end/src/app/utilisateurs/utilisateurs.component.html
+++ b/front-end/src/app/utilisateurs/utilisateurs.component.html
@@ -38,9 +38,9 @@
 <div class="jumbotron text-center">
 
   <!-- Title -->
-  <h2 class="card-title h2">Administration des Fournisseurs</h2>
+  <h2 class="card-title h2">Administration des Utilisateurs</h2>
   <!-- Subtitle -->
-  <p class="green-text my-4 font-weight-bold">iDlunch propose plus de fournisseurs</p>
+  <p class="green-text my-4 font-weight-bold">iDlunch a plus d'utilisateurs</p>
 
 
 
