--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -37,4 +37,22 @@
 <!--/.Navbar-->
 
 
+<!-- Jumbotron -->
+<div class="jumbotron text-center">
+
+  <!-- Title -->
+  <h2 class="card-title h2">Administration de la page iDlunch</h2>
+  <!-- Subtitle -->
+  <p class="green-text my-4 font-weight-bold">iDlunch propose un service de qualité</p>
+
+
+
+
+
+
+
+</div>
+<!-- Jumbotron -->
+
+
 
