--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -57,7 +57,7 @@
     </mdb-card-title>
 
     <h5 class="indigo-text  ">
-      <strong>Du soleil dans vos plas ?</strong>
+      <strong>Du soleil dans vos plats ?</strong>
     </h5>
 
     <mdb-card-text>
