--- a/front-end/src/app/admin/admin.component.html
+++ b/front-end/src/app/admin/admin.component.html
@@ -1,40 +1,23 @@
 <br>
 
-
-
-<!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-1 navbar-light green lighten-2 " [containerInside]="false">
-
-  <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand white-text py-4">Administration de la page</a></mdb-navbar-brand>
-
-  <!-- Collapsible content -->
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark green">
+  <mdb-navbar-brand>
+    <a class="navbar-brand" routerLink="/admin">Administration de la page</a>
+  </mdb-navbar-brand>
   <links>
-
-    <!-- Links -->
-    <ul class="navbar-nav mr-auto ">
-      <li class="nav-item ">
-        <a class="nav-link waves-light white-text" routerLink="/produits" mdbWavesEffect>PRODUITS<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light white-text" routerLink="/categories" mdbWavesEffect>CATEGORIES</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link waves-light white-text" routerLink="/fournisseurs" mdbWavesEffect>FOURNISSEURS</a>
-    </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light white-text" routerLink="/utilisateurs" mdbWavesEffect>UTILISATEURS</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link waves-light white-text" routerLink="/statistiques" mdbWavesEffect>STATISTIQUES</a>
-      </li>
-    </ul>
-    <!-- Links -->
+    <div class="navbar-nav">
+      <a class="nav-item nav-link waves-light" href="#" mdbWavesEffect routerLink="/produits">PRODUITS</a>
+      <a class="nav-item nav-link waves-light" href="#" mdbWavesEffect routerLink="/categories">CATEGORIES</a>
+      <a class="nav-item nav-link waves-light" href="#" mdbWavesEffect routerLink="/fournisseurs">FOURNISSEURS</a>
+      <a class="nav-item nav-link waves-light" href="#" mdbWavesEffect routerLink="/utilisateurs">UTILISATEURS</a>
+      <a class="nav-item nav-link waves-light" href="#" mdbWavesEffect routerLink="/statistiques">STATISTIQUES</a>
+    </div>
   </links>
-  <!-- Collapsible content -->
-
 </mdb-navbar>
-<!--/.Navbar-->
+
+
+
+
 
 
 <!-- Jumbotron -->
