--- a/front-end/src/app/news/news.component.html
+++ b/front-end/src/app/news/news.component.html
@@ -33,7 +33,7 @@
       <p class="font-weight-normal">L'hiver est presque fini et les fleurs seront bientot là !</p>
       <p class="font-weight-normal">by <a><strong>Victoire Michel</strong></a>, 19/03/2020</p>
 
-      <a mdbBtn class="waves-light green lighten-1" mdbWavesEffect>Plus de news</a>
+      <a mdbBtn class="waves-light green lighten-1" routerLink="/newsSup" mdbWavesEffect>Plus de news</a>
 
     </div>
     <!-- Grid column -->
@@ -57,3 +57,9 @@
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
+
+
+
+
+
+
