update connexion et améliorations

--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -31,10 +31,9 @@
           <div class="btn-group" mdbDropdown>
             <mdb-icon fas icon="user" mdbDropdownToggle></mdb-icon>
             <div class="dropdown-menu dropdown-menu-right dropdown-primary">
-              <a class="dropdown-item" routerLink="/connecter-admin">Admin</a>
+              <a class="dropdown-item" routerLink="/connecter" style="background-color: lightcyan">Se connecter</a>
               <div class="divider dropdown-divider"></div>
-              <a class="dropdown-item" routerLink="/connecter">Se connecter</a>
-              <a class="dropdown-item" routerLink="/">Se déconnecter</a>
+              <a class="dropdown-item" routerLink="/" style="background-color: lightpink">Se déconnecter</a>
             </div>
           </div>
         </a>
