--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -39,7 +39,7 @@
   <table id="table" mdbTable>
     <thead>
     <tr>
-      <th>id</th>
+      <!--<th>id</th>-->
       <th>Nom</th>
       <th>Catégorie</th>
       <th>Fournisseur</th>
@@ -48,7 +48,7 @@
     </thead>
     <tbody>
     <tr mdbTableCol *ngFor="let produit of produits">
-      <td>{{ produit.id }}</td>
+      <!--<td>{{ produit.id }}</td>-->
       <td>{{ produit.nom }}</td>
       <td>{{ produit.categorie }}</td>
       <td>{{ produit.fournisseur}}</td>
