--- a/front-end/src/app/statistiques/statistiques.component.html
+++ b/front-end/src/app/statistiques/statistiques.component.html
@@ -15,16 +15,6 @@
 </mdb-navbar>
 
 <br>
-
-<div style="display: block">
-  <canvas mdbChart
-          [chartType]="chartType"
-          [datasets]="chartDatasets"
-          [labels]="chartLabels"
-          [colors]="chartColors"
-          [options]="chartOptions"
-          [legend]="true"
-          (chartHover)="chartHovered($event)"
-          (chartClick)="chartClicked($event)">
-  </canvas>
+<div style="text-align: center">
+  <h2><a href="https://analytics.google.com/analytics/web/provision/#/report-home/a167789665w234031379p219500476" target="_blank">Google Analytics</a></h2>
 </div>
