--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -91,8 +91,7 @@
           <a mdbBtn floating="true" class="accent-1 waves-light" mdbWavesEffect>
             <mdb-icon fas icon="envelope"></mdb-icon>
           </a>
-          <p>info@gmail.com</p>
-          <p>sale@gmail.com</p>
+          <p>idLunchContact@gmail.com</p>
         </div>
       </div>
 
