--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -51,6 +51,8 @@
             <label for="form4">Votre message</label>
           </div>
 
+            <div>{{rep}}</div>
+
           <div class="text-center">
             <button type="submit" [disabled]="!contactForm.valid" mdbBtn class="waves-light green lighten-2" mdbWavesEffect>Envoyer</button>
           </div>
